# learn

./: .gitignore  README.md  python\fine-tuning\Qwen3-4B\Qwen3_(4B)-GRPO.ipynb
C++/REST_API/: CMakeCache.txt  main.cpp
C++/Zoo/: CMakeLists.txt  README.md  Untitled  build.sh  database.sql  main.cpp
C++/Zoo/include/dao/: AnimalDao.hpp  EmployeDao.hpp  EnclosDao.hpp
C++/Zoo/include/models/: Animal.hpp  Employe.hpp  Enclos.hpp  Mammifere.hpp  Oiseau.hpp  Reptile.hpp  Zoo.hpp
C++/Zoo/include/utils/: DatabaseManager.hpp
C++/Zoo/include/vue/: afficher.cpp  afficher.hpp  afficherAnimal.hpp  afficherEnclos.hpp
C++/Zoo/models/: Animal.cpp
C++/Zoo/src/dao/: AnimalDao.cpp  EmployeDao.cpp  EnclosDao.cpp
C++/Zoo/src/models/: Animal.cpp  Employe.cpp  Enclos.cpp  Mammifere.cpp  Oiseau.cpp  Reptile.cpp  Zoo.cpp
C++/Zoo/src/utils/: DatabaseManager.cpp
C++/Zoo/src/vue/: afficher.cpp  afficherAnimal.cpp  afficherEnclos.cpp
C++/bases/: main.cpp
C++/calculatrice/: main.cpp
C++/calculatrice/utils/: console.cpp
C++/my_first_cpp_IHM/: mainwindow.cpp  mainwindow.h  mainwindow.ui
C++/perceptron/: CMakeLists.txt  main.cpp
C/DeepNeuralNetwork/: build.sh  main  main.c
C/DeepNeuralNetwork/lib/: mlp.c  mlp.h
C/Inverse-Kinematic/: main  main.c  test.c
C/MLP-test/: main  main.c
C/RNN/: main  main.c
C/Tensorflow/: README.md
C/bases/: main  main.c
C/calculatrice/: main  main.c
C/color_cli/: main  main.c
C/lib-MLP/: Makefile  main.c  mlp  mlp.c  mlp.h
C/lib-MLP/test/: main
C/perceptron/: main  main.c
C/perceptron-multicouche/: a.out  main  main.c  minimalist  minimalist.c
C/train-perceptron/: main  main.c
C/train-perceptron-2D-visualisation/: Makefile  main  main.c
Rust/3d-engine/: Cargo.toml
Rust/3d-engine/src/: main.rs
Rust/POO/: Cargo.toml
Rust/POO/src/: main.rs
Rust/POO/src/classes/: Personne.rs  mod.rs
Rust/helloWorld/src/: main.rs
Rust/trigo-calc/: Cargo.toml  README.md
Rust/trigo-calc/src/: main.rs  visualisation.rs
asm/addition/: main.asm  start.sh
asm/hello-world/: main  main.asm  start.sh
asm/instructs/: main.asm
math/: README.md
math/DeepLearning/RNN/: rnn.md
math/DeepLearning/deep-neural-network/: reseaux-neurones-profonds.md
math/DeepLearning/perceptron/: perceptron-multicouches.md  perceptron.md
math/ensemble-numérique/: Symboles.md
math/fonctions & signes/: func-signes.md
math/valeur-absolue/: expressions.md
python/Qwen3-4B/: Qwen3_(4B)-GRPO.ipynb
python/SNNs/: vlm_snn.py
python/fine-tuning/: README.md
python/fine-tuning/Qwen3-4B/: Qwen3_(4B)-GRPO.ipynb  convert-to-gguf.ipynb  convert-yo-gguf.ipynb  main.ipynb
python/fine-tuning/datasets/: animations.json  animations.txt  global_com.json
python/mlp/: main.py
python/tensorflow/SLM/: README.md  requirements.txt  setup.py
python/tensorflow/SLM/data/: sample_qa.txt
python/tensorflow/SLM/src/: main.py
python/tensorflow/SLM/src/data/: __init__.py  preprocessing.py  sample_qa.txt  tokenizer.py
python/tensorflow/SLM/src/models/: __init__.py  lstm_model.py  rnn_model.py
python/tensorflow/SLM/src/training/: __init__.py  train.py
python/tensorflow/SLM/src/utils/: __init__.py  helpers.py
website/math/: index.html
website/math/predicat-quantificateur/: cours.html  exos.html
